app/assets/stylesheets/family-tree.scss
#family-tree-wrapper {
  width: 100%;
  height: 90vh;
  position: relative;

  svg {
    width: 100%;
    height: 100%;
  }

  i.loading {
    position: fixed;
    top: 50%;
    left: 50%;
    color: #fff;
  }

  #search-wrapper {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
  }

  .node {
    @extend .card;
    width: 100%;
    height: 100%;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    span {
      display: -webkit-box;
      line-clamp: 2;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;  
      overflow: hidden;
    }

    .list-group {
      text-align: left;
    }

    &.selected {
      color: #fff;
      background-color: var(--bs-primary);
    }

    &.in-path {
      color: #fff;
      background-color: var(--bs-info);
    }
  }
}

